...
            cell.accessoryType = UITableViewCellAccessoryDisclosureIndicator;
            
        }
        
    } else if(indexPath.section == GNSStatusTableSectionGNSReload) {
        
        cell.textLabel.text = @"Reload GNS Data";
        cell.textLabel.textAlignment = NSTextAlignmentCenter;
        
    } else if(indexPath.section == GNSStatusTableSectionGNSGUID) {
        
        if (indexPath.row == 0) {
            NSString *username = self.app.user.gnsUsername;
...
        
        cell.textLabel.text = @"Enter GNS Credentials";
        cell.textLabel.textAlignment = NSTextAlignmentCenter;
        
    } else if(indexPath.section == GNSStatusTableSectionGNSServer) {
        
        UITableViewCell *cell = [tableView dequeueReusableCellWithIdentifier:@"gnsServer"];
        if (cell == nil) {
            cell = [[UITableViewCell alloc] initWithStyle:UITableViewCellStyleDefault reuseIdentifier:@"gnsServer"];
        }
        
        cell.selectionStyle = UITableViewCellSelectionStyleNone;
        self.gnsHostTextField.frame = CGRectInset(cell.contentView.bounds, 50, 0);
        [cell.contentView addSubview:self.gnsHostTextField];
        [self.gnsHostTextField setAccessibilityIdentifier:@"gnsServer"];
        return cell;
        
    } else if(indexPath.section == GNSStatusTableSectionGNSPort) {
        
        UITableViewCell *cell = [tableView dequeueReusableCellWithIdentifier:@"gnsPort"];
        if (cell == nil) {
            cell = [[UITableViewCell alloc] initWithStyle:UITableViewCellStyleDefault reuseIdentifier:@"gnsPort"];
        }
        
        cell.selectionStyle = UITableViewCellSelectionStyleNone;
        self.gnsPortTextField.frame = CGRectInset(cell.contentView.bounds, 50, 0);
...
            cell = [[UITableViewCell alloc] initWithStyle:UITableViewCellStyleValue1 reuseIdentifier:@"backendCells"];
        }
        
        cell.selectionStyle = UITableViewCellSelectionStyleDefault;
        
        if (indexPath.row == 0) {
            UITableViewCell *cell = [tableView dequeueReusableCellWithIdentifier:@"backendURL"];
            if (cell == nil) {
                cell = [[UITableViewCell alloc] initWithStyle:UITableViewCellStyleDefault reuseIdentifier:@"backendURL"];
            }
            
            cell.selectionStyle = UITableViewCellSelectionStyleNone;
            self.backendHostTextField.frame = CGRectInset(cell.contentView.bounds, 50, 0);
...
}

- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view from its nib.

    self.title = @"GNS Status";

    self.app = [GGApp instance];
    
    self.gnsData = @"";
    self.loadingGNSData = NO;
    
...
    self.gnsPortTextField.delegate = self;
    self.gnsPortTextField.placeholder = [NSString stringWithFormat:@"%li",(long)[GGConstants gnsDefaultPort]];
    self.gnsPortTextField.keyboardType = UIKeyboardTypeNumberPad;
    self.gnsPortTextField.returnKeyType = UIReturnKeyDone;
    
    self.gnsPortDoneButton = [UIButton buttonWithType:UIButtonTypeSystem];
    [self.gnsPortDoneButton setTitle:@"Done" forState:UIControlStateNormal];
    [self.gnsPortDoneButton addTarget:self action:@selector(gnsDoneButtonPressed:) forControlEvents:UIControlEventTouchUpInside];

    self.backendHostTextField = [[UITextField alloc] init];
    self.backendHostTextField.text = [GGConstants backendURL];
    self.backendHostTextField.delegate = self;
    self.backendHostTextField.autocapitalizationType = UITextAutocapitalizationTypeNone;
...
