...
#pragma mark - MapView Delegate

-(void)updateLocationButton
{
    if ([self.app isLocationServicesEnabled]) {

        [self.locationButton setImage:[UIImage imageNamed:@"location"] forState:UIControlStateNormal];

        switch (self.mapView.userTrackingMode) {
            case MKUserTrackingModeFollow:
                [self.locationButton setTintColor:[UIColor umassMaroonColor]];
                break;
            case MKUserTrackingModeFollowWithHeading:
...


- (void)viewDidLoad {
    [super viewDidLoad];
    // Do any additional setup after loading the view, typically from a nib.
    
    self.tabBarItem.title = @"UMass Emergency";
    self.title = @"UMass Emergency";
    self.navigationItem.titleView = [[UIImageView alloc] initWithImage:[[UIImage imageNamed:@"report_icon_small"] imageWithRenderingMode:UIImageRenderingModeAlwaysTemplate]];

    self.app = [GGApp instance];
    [self.app addDataDelegate:self];
    
...
    }
    
    self.timeframes = self.app.dataManager.timeframes;

    self.selectedTimeframe = self.timeframes[3];

    UIBarButtonItem *aboutButton = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"info"] landscapeImagePhone:[UIImage imageNamed:@"info"] style:UIBarButtonItemStylePlain target:self action:@selector(aboutButtonPressed:)];
    [self.navigationItem setLeftBarButtonItems:@[aboutButton]];
    
    self.listButton = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"list"] style:UIBarButtonItemStylePlain target:self action:@selector(listButtonPressed:)];
    [self.navigationItem setRightBarButtonItems:[NSArray arrayWithObjects:self.listButton, nil]];
 
    [self hideListAnimated:NO withCompletion:nil];

    self.locationButton = [GGMapOverlayButton buttonWithType:UIButtonTypeSystem];
    self.locationButton.frame = CGRectMake(0, 0, 70, 44);
...
