...
    } else if(indexPath.section == DeveloperSettingsTableSectionGroupSettings) {

        cell.accessoryType = UITableViewCellAccessoryDisclosureIndicator;

        if (indexPath.row == 0) {
            // GNS
            cell.textLabel.text = @"GNS";
        }else if(indexPath.row == 1) {
            // Simulation
            cell.textLabel.text = @"Simulation settings";
        }
        
    } else if(indexPath.section == DeveloperSettingsTableSectionSettings) {
...
